--- a/public/chat.html
+++ b/public/chat.html
@@ -4,11 +4,11 @@
 <head>
     <title>Chat App</title>
     <link rel="icon" href="./img/favicon.png" />
-    <link rel="stylesheet" href="./css/styles.min.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
-    <h1>Index Page</h1>
+    <h1>Chat Screen</h1>
     <h2 id="date"></h2>
     <div class="chat">
         <div id="sidebar" class="chat__sidebar">
@@ -22,20 +22,11 @@
                     <input type="text" name="inputMsg" id="input-msg" placeholder="Message" required autocomplete="off" />
                     <button id="btn1">Submit</button>
                 </form>
-                <button id="send-location">Share Location</button>
+                <button id="send-location">Share Location</button>&nbsp;
+                <button id="logOut">LogOut</button>
             </div>
         </div>
     </div>
-    <!-- <h1>Index Page</h1>
-    <h2 id="date"></h2> -->
-    <!-- <div id="messages"></div> -->
-    <!-- <div id="current-location"></div> -->
-
-    <!-- <form id="msg-form">
-        <input type="text" name="inputMsg" id="input-msg" placeholder="Message" />
-        <button id="btn1">Submit</button>
-    </form>
-    <button id="send-location">Share Location</button> -->
 
     <script id="message-template" type="text/html">
         <div class="message">
