--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Chat App</title>
     <link rel="icon" href="./img/favicon.png" />
-    <link rel="stylesheet" href="./css/styles.min.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
@@ -13,10 +13,10 @@
             <h1>Join</h1>
             <form action="/chat.html">
                 <label>Display Name</label>
-                <input type="text" name="username" placeholder="User Name" required/>
+                <input type="text" name="username" placeholder="User Name" required autocomplete="off" />
                 <label>Room</label>
-                <input type="text" name="room" placeholder="Room" required/>
-                <button>Join Room</button>
+                <input type="text" name="room" placeholder="Room" required autocomplete="off" />
+                <button class="join">Join Room</button>
             </form>
         </div>
     </div>
